# ExampleMeson

./: README.md  meson.build
docs/: Doxyfile
src/: meson.build
subprojects/: catch2.wrap  openlibm.wrap
subprojects/packagefiles/openlibm/: meson.build
subprojects/packagefiles/printf/: meson.build
test/: meson.build
